--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "reverso-api": "^2.19.2"
+    "reverso-api": "^2.19.2",
+    "uuid": "^8.3.2"
   }
 }
