--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "genius-lyrics-api": "^3.2.0",
+    "helmet": "^5.1.0",
     "reverso-api": "^2.19.2",
     "uuid": "^8.3.2"
   }
